1.piyush/D47-Gateway-API/IMP-hands-on/migration-ingress-to-gateway-api-fabric/ingresses.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.org/rewrite-target":"/"},"name":"cafe-ingress","namespace":"default"},"spec":{"ingressClassName":"nginx","rules":[{"host":"cafe.example.com","http":{"paths":[{"backend":{"service":{"name":"tea-1","port":{"number":80}}},"path":"/tea1","pathType":"Prefix"},{"backend":{"service":{"name":"coffee-1","port":{"number":80}}},"path":"/coffee1","pathType":"Prefix"}]}}]}}
      nginx.org/rewrite-target: /
    creationTimestamp: "2026-03-17T10:41:41Z"
    generation: 1
    name: cafe-ingress
    namespace: default
    resourceVersion: "30114"
    uid: 103589d4-fe71-4fc0-8715-36cafe819f3e
  spec:
    ingressClassName: nginx
    rules:
    - host: cafe.example.com
      http:
        paths:
        - backend:
            service:
              name: tea-1
              port:
                number: 80
          path: /tea1
          pathType: Prefix
        - backend:
            service:
              name: coffee-1
              port:
                number: 80
          path: /coffee1
          pathType: Prefix
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
